volumes of meta updated

--- a/P006918.opf/meta.yml
+++ b/P006918.opf/meta.yml
@@ -4,4 +4,9 @@ source_metadata:
   id: bdr:W1KG4459
   title: རྡོ་རྗེ་སེམས་དཔའ་ལ་བརྟེན་པའི་བླ་མ་མཆོད་པའི་ཆོ་ག་གཞན་ཕན་གྱི་ཕྲིན་ལས་དང་བཅས་པ་བདེ་ཆེན་ལམ་བཟང་།
   author: ''
-  volumes: {}
+  volumes:
+    33369efe154f4e13a8a25cafed1ae405:
+      image_group_id: I1KG4582
+      title: ''
+      volume_number: 1
+      total_pages: 100
