--- a/P006918.opf/layers/v001/Pagination.yml
+++ b/P006918.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: 49132759e2e44a9ebee2b0683fc1f89c
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   461bbfd5b4bc4bb987e81217973cf0a9:
