--- a/P006918.opf/meta.yml
+++ b/P006918.opf/meta.yml
@@ -1,7 +1,7 @@
 id: P006918
 initial_creation_type: ocr
 created_at: 28/03/2020
-last_modified_at: 25/11/2021
+last_modified_at: 2021-12-17 12:30:38.361825
 source_metadata:
   id: bdr:W1KG4459
   title: རྡོ་རྗེ་སེམས་དཔའ་ལ་བརྟེན་པའི་བླ་མ་མཆོད་པའི་ཆོ་ག་གཞན་ཕན་གྱི་ཕྲིན་ལས་དང་བཅས་པ་བདེ་ཆེན་ལམ་བཟང་།
@@ -13,3 +13,5 @@ source_metadata:
       volume_number: 1
       total_pages: 100
       base_file: v001.txt
+  access: http://purl.bdrc.io/admindata/AccessOpen
+  restrictedInChina: false
